package com.tacs.backend.domain.usuario;

public enum TipoRol
{
  USER,
  ADMIN
}
